[package]
name = "ferris-mark-dx"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D_Dxc",
    "Win32_Graphics_Direct3D_Fxc",
    "implement"
] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]

[dependencies.rand]
version = "0.8"

[features]
default = []
d3d11-debug = []
